--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,7 @@
 server {
   listen 80;
-  listen 443;
   
   location / {
-    proxy_pass ${DESTINATION};
+    proxy_pass http://${DESTINATION};
   }
 }
